force-app/main/default/objects/Education__c/fields/DegreeEarned__c.field-meta.xml
<CustomField>
    <fullName>DegreeEarned__c</fullName>
    <label>Degree Earned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>BSN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>