force-app/main/default/objects/Education__c/fields/LocationCityStateCountry__c.field-meta.xml
<CustomField>
    <fullName>LocationCityStateCountry__c</fullName>
    <label>Location (City/State/Country)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>