force-app/main/default/objects/Education__c/fields/NameofSchool__c.field-meta.xml
<CustomField>
    <fullName>NameofSchool__c</fullName>
    <label>Name of School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>