force-app/main/default/objects/Education__c/fields/ToDate__c.field-meta.xml
<CustomField>
    <fullName>ToDate__c</fullName>
    <label>To Date</label>
    <type>Date</type>
</CustomField>