force-app/main/default/objects/Education__c/fields/TypeofProgram__c.field-meta.xml
<CustomField>
    <fullName>TypeofProgram__c</fullName>
    <label>Type of Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>LPN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>